# RemoteControl

./: .gitignore  .gitmodules  Cargo.toml
app-android/: gradle.properties  settings.gradle.kts
app-android/app/: build.gradle.kts  proguard-rules.pro
app-android/app/src/main/: AndroidManifest.xml
app-android/app/src/main/java/com/remotecontrol/app/: MainActivity.kt
app-android/app/src/main/java/com/remotecontrol/app/model/: ConnectionState.kt  QrPayload.kt
app-android/app/src/main/java/com/remotecontrol/app/net/: ConnectionClient.kt  Protocol.kt  TrustedServers.kt
app-android/app/src/main/java/com/remotecontrol/app/ui/: AppNav.kt  AppViewModel.kt  DiagnosticsOverlay.kt  KeyboardOverlay.kt  MainScreen.kt  ReceivedFilesSheet.kt  ScannerScreen.kt  StreamSurface.kt
app-android/app/src/main/java/com/remotecontrol/app/video/: AvSyncClock.kt  H264Player.kt  OpusPlayer.kt
app-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
app-android/app/src/main/res/values/: strings.xml  themes.xml
app-android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app-android/gradle/: libs.versions.toml
docs/: PROTOCOL.md  RELAY_DEPLOYMENT.md  RELEASE.md  SETUP.md
installer/: .gitignore  RemoteControl.iss  build-installer.ps1
relay/: Cargo.toml
relay/src/: main.rs
server-pc/: Cargo.toml  build.rs
server-pc/examples/: capture_encode_test.rs
server-pc/src/: clipboard.rs  config.rs  connection.rs  file_send.rs  input.rs  lib.rs  main.rs  net.rs  pairing.rs  paths.rs  protocol.rs  qr.rs  qr_server.rs  relay_client.rs  stream.rs  tray.rs  trusted_devices.rs  video.rs  ws_server.rs
server-pc/src/audio/: capture.rs  encoder.rs  mod.rs
server-pc/src/capture/: dxgi.rs  mod.rs
server-pc/src/encoder/: common.rs  mf_h264.rs  mod.rs  nvenc_mft.rs  nvenc_sdk.rs  nvenc_sys.rs  resize.rs
