[package]
name = "remotecontrol-server"
version = "0.1.0"
edition = "2021"
description = "Windows PC server for phone remote control"
# NVENC SDK direct integration (M4-B): bindgen runs in build.rs against
# vendor/nv-codec-headers/include/ffnvcodec/nvEncodeAPI.h to produce
# Rust FFI in $OUT_DIR/nvenc_sys.rs, which encoder/nvenc_sys.rs include!()s.
# We don't link nvEncodeAPI64.dll — encoder/nvenc_sdk.rs LoadLibraryW's it
# at runtime so the binary still launches on machines without an NVIDIA
# GPU (falls back to MFT-software / MFT-hardware H.264 there).
build = "build.rs"

[lib]
name = "remotecontrol_server"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.70"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "remotecontrol-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

qrcode = "0.14"

if-addrs = "0.13"

# Opus codec for M5 audio. Vendored libopus via cc, builds on Windows MSVC.
opus = "0.3"

# SIMD-accelerated image resize (M4: 1080p → 720p before encoding).
fast_image_resize = "5"

# M4-B: NVENC SDK direct integration loads `nvEncodeAPI64.dll` at runtime
# via libloading so the binary still launches on machines without an
# NVIDIA driver (the SDK encoder constructor returns Err and stream.rs
# falls back to the MFT path).
libloading = "0.8"

# Cross-network relay client: HTTP POST to register, TOML for the
# resulting host_id/host_token persistence.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# System tray icon (M9-ish polish): runs alongside the console window so
# the user can keep the server up without staring at a terminal. tao
# gives us a cross-platform event loop that pumps Win32 messages
# (required for tray-icon to receive menu clicks).
tray-icon = "0.19"
tao = "0.30"
# Embedded WebView for the in-app QR page so the user doesn't have to
# leave the app to scan or drop files. Uses WebView2 on Windows
# (pre-installed on Win11, present via Edge on most Win10 setups).
wry = "0.45"

# Windows-only: DXGI Desktop Duplication for capture, Media Foundation for H.264 encode.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # NVENC SDK direct integration (M4-B): need to acquire and signal Win32
    # event objects to wait on async encoder output instead of polling.
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Audio",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
] }

